Nivel 3 - 4.13. Teste de contrato com Mocks

--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,7 @@ dependencies {
 }
 
 contracts {
-    testFramework ='JUNIT5'
-    testMode = 'MockMvc'
-    contractsDslDir = project.file("${layout.projectDirectory}/src/contractTest/resources/contracts")
+    packageWithBaseClasses = "com.algaworks.algashop.ordering.contract.base"
 }
 
 tasks.named('contractTest') {
