Nivel 3 - 6.7. Executando Flyway Migrations via Spring Boot

--- a/flyway.conf
+++ b/flyway.conf
@@ -3,4 +3,4 @@ flyway.password=postgres
 flyway.schemas=public
 flyway.url=jdbc:postgresql://172.29.208.201:5432/ordering
 flyway.locations=classpath:db/migration
-# flyway.cleanDisabled=false
+flyway.cleanDisabled=false
